syntax = "proto3";

package agntcy.identity.v1alpha1;

import "agntcy/identity/v1alpha1/id.proto";
import "agntcy/identity/v1alpha1/issuer.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/agntcy/identity/internal/pkg/generated/agntcy/identity/v1alpha1;identity_sdk_go";

// IssuerService is the service that provides ISSUER operations.
service IssuerService {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
    name: "IssuerService";
  };

  // Generate a keypair in JWK format
  rpc KeyGen(google.protobuf.Empty) returns (Jwk) {
    option (google.api.http) = {
            get: "/v1alpha1/issuer/keygen"
        };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      operation_id: "KeyGen";
      summary: "Generate a keypair in JWK format";
    };
  }

  // Register
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
            post: "/v1alpha1/issuer/register"
            body: "issuer"
        };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      operation_id: "RegisterIssuer";
      summary: "Register a issuer";
    };
  }


  // WellKnown endpoint
  rpc WellKnown(WellKnownRequest) returns (Jwks) {
    option (google.api.http) = {
            get: "/v1alpha1/issuer/{common_name}/.well-known/jwks.json"
        };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      operation_id: "WellKnown";
      summary: "Returns the well-known document for an issuer";
    };
  }
}

// RegisterRequest is the request to register an issuer
message RegisterRequest {
  // The Issuer to register.
  Issuer issuer = 1;
}

message RegisterResponse {
  // A uri indicating an action to take to complete the registration.
  string uri = 1;
}

message WellKnownRequest {
  // The common name of the issuer
  string common_name = 1;
}
