
module.exports = {"protodocs":[{"type":"category","label":"Files","items":[{"type":"category","label":"/agntcy/pyramid/v1alpha1","items":[{"type":"doc","id":"agntcy/pyramid/v1alpha1/id.proto"},{"type":"doc","id":"agntcy/pyramid/v1alpha1/claims_service.proto"},{"type":"doc","id":"agntcy/pyramid/v1alpha1/id_service.proto"},{"type":"doc","id":"agntcy/pyramid/v1alpha1/issuer.proto"},{"type":"doc","id":"agntcy/pyramid/v1alpha1/issuer_service.proto"},{"type":"doc","id":"agntcy/pyramid/v1alpha1/openapi.proto"}]}]}]};
  